# Syn_OS

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .vscode-terminal-fix.sh  .wgetrc  ; git tag -f -a   -m Archive  ACHIEVEMENT_PRESERVATION_REPORT.md  AUTOMATION_DEPLOYMENT_COMPLETE.md  A_PLUS_ACHIEVEMENT_FINAL.md  BRANCH_CONSISTENCY_REPORT.md  BUILD_READINESS_CHECKLIST_2025-10-14.md  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_ADDED.md  CLEANUP_AUDIT_2025-10-17.md  CODEOWNERS  CODESPACE_DEPLOYMENT_COMPLETE.md  CODESPACE_ISSUES_FIXED.md  CODESPACE_SETUP_GUIDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_CHANGES_AUDIT_2025-10-21.md  COMPREHENSIVE_CODEBASE_AUDIT_AUGUST_2025.md  COMPREHENSIVE_TECHNICAL_AUDIT_REPORT.md  CONTRIBUTING.md  CURRENT_STRUCTURE_MAP.md  Cargo.toml  DEV_TEAM_WORKFLOW.md  DEV_TEAM_WORKFLOW_GUIDE.md  DOCUMENTATION_OVERHAUL_COMPLETE.md  DOCUMENTATION_SYNC_SETUP.md  Dockerfile.consciousness  EBPF_100_PERCENT_COMPLETION_REPORT.md  EBPF_SUCCESS_SUMMARY.md  FINAL_BRANCH_CONSISTENCY_VERIFICATION.md  FINAL_INTEGRATION_STATUS.md  GENAI_OS_100_PERCENT_COMPLETION_REPORT.md  HIGH_PRIORITY_INTEGRATION_MILESTONE_COMPLETE.md  INSTALL_AI_LIBS.md  LARGE-FILES-AUDIT.md  (+79 more)
archive-consolidated/05-legacy-systems/: BRANCH_ARCHIVE_2025-08-28.md  Cargo.toml
archive-consolidated/05-legacy-systems/01-strategic/: SYNAPTICOS_CONCEPT_MIGRATION_ANALYSIS.md
archive-consolidated/05-legacy-systems/extracted-branch-data/: TLimoges33_Syn_OS_feature_ai-ml-consciousness-core.md  TLimoges33_Syn_OS_feature_enterprise-features-scalability.md  TLimoges33_Syn_OS_feature_enterprise-integration.md  TLimoges33_Syn_OS_feature_security-framework.md  TLimoges33_Syn_OS_feature_testing-framework.md
core/ai/: Cargo.toml
core/ai/src/: lib.rs  tests.rs
core/services/: Cargo.toml  README.md
core/services/examples/: service_demo_fixed.rs
core/services/src/: auth.rs  discovery.rs  lib.rs  nats.rs
development/: .env.example  CLEANUP_REPORT.md  README.md  master-dev-copy-manager.sh  package.json  pyproject.toml  requirements.txt  synaptikos_phase1_main.py  synos-dev
development/.claude/: settings.local.json
development/ai-engine/core/: consciousness_engine.py
development/complete-docker-strategy/: .env  SCADI_IMPLEMENTATION_COMPLETE.md  demo-scadi.py  docker-compose.yml
development/complete-docker-strategy/docker/: Dockerfile.apps
development/educational-platform/gamification/: consciousness_gamification.py
development/implementation/: progress_tracker.py
development/kernel/src/: consciousness_kernel.rs
development/tests/: test_integration.py
development/tools/dev-utils/: Cargo.toml
development/tools/testing/: phase_1_test_suite.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_input_validation.rs
prototypes/quantum-consciousness-kernel/: Cargo.toml
prototypes/quantum-consciousness-kernel/src/: consciousness.rs  learning_analytics.rs  main_minimal.rs  main_original.rs  memory.rs  networking.rs  threat_detection.rs
services/: Cargo.toml
services/consciousness-ai-bridge/: consciousness-ai-bridge.service  consciousness_ai_bridge.py
services/consciousness-dashboard/: consciousness-dashboard.service
services/consciousness-ray-distributed/: Dockerfile  ray-consciousness.env  ray-consciousness.service  ray_consciousness_api.py  ray_consciousness_api_simple.py  ray_consciousness_engine.py  ray_consciousness_engine_neural.py  ray_consciousness_engine_proper.py  requirements.txt
services/consciousness-unified/: requirements.txt  unified_consciousness_service.py
services/context-engine/: Dockerfile  context_engine.py
services/context-intelligence-unified/: Dockerfile  unified_context_intelligence_service.py
services/educational-unified/: optimized_api_cache.py  unified_educational_platform.py
services/orchestrator/: Dockerfile  go.mod
src/ai-engine/: Cargo.toml  REORGANIZATION_GUIDE.md
src/ai-engine/src/: linux.rs
src/ai-runtime/: Cargo.toml
src/ai-runtime/model-manager/: crypto.rs  mod.rs
src/ai-runtime/onnx/: ffi.rs  mod.rs
src/ai-runtime/pytorch/: ffi.rs  mod.rs
src/ai-runtime/tflite/: ffi.rs  mod.rs
src/ai-tutor/: Cargo.toml  adaptive_difficulty.rs  ai_tutor.rs  hint_system.rs  learning_style_detector.rs  mod.rs
src/analytics/: Cargo.toml
src/analytics/src/: anomaly_detector.rs  lib.rs  main.rs  (+4 more)
src/cloud-security/: Cargo.toml  aws_security_bridge.rs  azure_sentinel_bridge.rs  cloud_security_orchestrator.rs  gcp_security_bridge.rs  mod.rs
src/compliance-runner/: Cargo.toml
src/consciousness/: Cargo.toml  mediapipe_consciousness.py
src/ctf-platform/: Cargo.toml  README.md  ctf_engine.rs  main.rs  mod.rs
src/deception-tech/: Cargo.toml
src/desktop/: Cargo.toml  ctf_platform_bridge.rs  icons.rs  launcher.rs  mod.rs  notifications.rs  wallpaper.rs
src/gamification/: Cargo.toml  achievements_database.rs  legendary_skill_tree.rs  mod.rs  prestige_and_iconic.rs  skill_tree_database.rs
src/graphics/: Cargo.toml  drivers.rs  framebuffer.rs  lib.rs  primitives.rs  window_manager.rs
src/hsm-integration/: Cargo.toml
src/kernel/: BUILD.md  Cargo.toml  KERNEL_REORGANIZATION_GUIDE.md  boot.asm  build_test.rs  grub.cfg  linker.ld  qemu_test_rust.sh  x86_64-syn_os.json
src/mobile-bridge/: Cargo.toml  mod.rs  websocket_bridge.rs
src/quantum-consciousness/: Cargo.toml  README.md  main.rs  mod.rs  quantum_ai.rs
src/security/: Cargo.toml  README.md  access_control_identity_management.py  advanced_security_orchestrator.py  audit_logger.py  config_manager.py  consciousness_security_controller.py  emergency_access_control.py  enhanced_zero_trust_100_percent.py  enhanced_zero_trust_manager_clean.py  enterprise_mssp_platform.py  incident_response_procedures.py  input_sanitization.py  mtls_certificate_manager.py  quantum_crypto.py  security_event_logger.py  security_integration_bridge.py  siem_security_monitoring.py  zero_trust_manager.py
src/services/: Cargo.toml
src/threat-hunting/: Cargo.toml
src/threat-intel/: Cargo.toml
src/universal-command/: Cargo.toml  README.md  main.rs  mod.rs  tool_orchestrator.rs
src/zero-trust-engine/: Cargo.toml
(+5431 files in other folders)
