[workspace]
members = [
    "src/kernel",
    "src/security", 
    "src/consciousness",
    # Temporarily exclude std-dependent packages to resolve core library conflicts
    # "tests/integration",
    # "tools/dev-utils"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["SynapticOS Team"]
repository = "https://github.com/TLimoges33/Syn_OS"

[workspace.dependencies]
# Core system dependencies with proper no-std configuration
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
anyhow = { version = "1.0", default-features = false }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

# Kernel specific dependencies  
bootloader = "0.9"
spin = { version = "0.9", default-features = false, features = ["mutex", "rwlock", "spin_mutex"] }
x86_64 = { version = "0.14", features = ["instructions"] }
volatile = "0.4"
pic8259 = "0.10"
pc-keyboard = "0.7"
linked_list_allocator = "0.10"

# Testing dependencies
criterion = "0.5"
proptest = "1.0"

# Security dependencies - unified versions with proper no-std support
ring = { version = "0.17", default-features = false, features = ["alloc"] }
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
x25519-dalek = { version = "2.0", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.2", default-features = false, features = ["alloc", "rand_core"] }
thiserror = { version = "1.0", default-features = false }
rand_core = { version = "0.6", default-features = false }

# Remove conflicting ML dependencies temporarily
# candle-core = "0.3"
# candle-nn = "0.3"
# tokenizers = "0.15"

[profile.dev]
panic = "abort"
debug = true
opt-level = 0

[profile.release]
panic = "abort"
debug = false
opt-level = "s"  # Optimize for size
lto = true
codegen-units = 1

[profile.test]
panic = "unwind"
debug = true

# Kernel-specific profile
[profile.kernel]
inherits = "release"
panic = "abort"
opt-level = "s"
debug = false
