[workspace]
members = [
    "src/kernel",
    "tests/integration",
    "tools/dev-utils"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["SynapticOS Team"]
repository = "https://github.com/TLimoges33/Syn_OS"

[workspace.dependencies]
# Core system dependencies
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

# Kernel specific dependencies  
bootloader = "0.9"
spin = "0.9"
x86_64 = "0.14"
volatile = "0.4"
pic8259 = "0.10"
pc-keyboard = "0.7"
linked_list_allocator = "0.10"

# Testing dependencies
criterion = "0.5"
proptest = "1.0"

# ML dependencies (simplified)
candle-core = "0.3"
candle-nn = "0.3"
tokenizers = "0.15"
ed25519-dalek = "2.0"

[profile.dev]
panic = "abort"
debug = true
opt-level = 0

[profile.release]
panic = "abort"
debug = false
opt-level = "s"  # Optimize for size
lto = true
codegen-units = 1

[profile.test]
panic = "unwind"
debug = true

# Kernel-specific profile
[profile.kernel]
inherits = "release"
panic = "abort"
opt-level = "s"
debug = false
