[package]
name = "syn-ai"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Core no_std dependencies
spin = { workspace = true }
lazy_static = { workspace = true }

# Serialization (no_std compatible) - temporarily disabled for kernel build
# serde = { workspace = true, default-features = false, features = ["derive"] }

[features]
default = ["decision-engine", "pattern-recognition", "neural-networks"]
decision-engine = []
pattern-recognition = []
neural-networks = []
inference-engine = []
security-integration = []
consciousness = ["neural-networks", "pattern-recognition", "inference-engine"]
ai-bridge = ["security-integration"]
educational = ["pattern-recognition"]
