[package]
name = "synaptic-ai-engine"
version = "1.0.0"
edition = "2021"
description = "SynapticOS AI Engine - Core AI Runtime Infrastructure for Linux Distribution"
authors = ["SynOS Team"]
license = "MIT"

[dependencies]
# AI runtime dependencies
# TensorFlow Lite Integration (Candle-based) - use latest stable version
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
ort = { workspace = true, optional = true }         # ONNX Runtime
# Python integration for PyTorch (instead of problematic tch crate)
pyo3 = { version = "0.20", optional = true }        # Python integration

# System integration
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }

# Additional dependencies for new modular structure
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# V2.0: Quantum Consciousness Integration
synos-quantum-consciousness = { path = "../quantum-consciousness" }

# IPC and messaging
zeromq = { workspace = true }
nng = { workspace = true }

# Linux system integration
systemd = { workspace = true, optional = true }
dbus = { workspace = true, optional = true }
nix = { workspace = true }
libc = { workspace = true }

# Cryptography for secure model loading
ring = { workspace = true }
chacha20poly1305 = { workspace = true }
hex = "0.4"

# Additional system dependencies
num_cpus = "1.16"
tracing-subscriber = "0.3"

[features]
default = ["lightweight"]
lightweight = []
tensorflow-lite = ["candle-core", "candle-nn"]
onnx = ["ort"]
pytorch = ["pyo3"]
full-ai = ["tensorflow-lite", "onnx", "pytorch"]
hardware-acceleration = []
linux-integration = ["systemd", "dbus"]
