[package]
name = "synos-cloud-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "synos_cloud_security"
path = "mod.rs"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { version = "0.4", features = ["serde", "clock"] }  # Override workspace to add clock
uuid = { workspace = true }

# HTTP client for cloud API calls (when implemented)
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["std"]
std = []
cloud-apis = ["reqwest"]  # Enable actual cloud API integration

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
