[package]
name = "synos-compliance-runner"
version = "1.0.0"
edition = "2021"
authors = ["SynOS Team"]
description = "Automated compliance assessment runner for NIST, ISO, PCI, GDPR, SOX, HIPAA, FedRAMP"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "compliance_runner"
path = "src/lib.rs"

[[bin]]
name = "synos-compliance"
path = "src/main.rs"
