[package]
name = "syn-consciousness"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# AI/ML dependencies
candle-core = { workspace = true }
candle-nn = { workspace = true }
tokenizers = { workspace = true }

# Security
ring = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Async runtime
tokio = { workspace = true }

[features]
default = ["local-inference", "decision-engine"]
local-inference = []
decision-engine = []
pattern-recognition = []
