[package]
name = "synos-ctf-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "synos_ctf_platform"
path = "mod.rs"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync", "macros", "process"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { workspace = true }

# Optional VM management
# docker-api = { version = "0.14", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
default = ["std"]
std = []
vm-management = []  # Enable VM spawning features
