[package]
name = "synos-deception"
version = "1.0.0"
edition = "2021"
authors = ["SynOS Team"]
description = "Advanced Deception Technology Framework for SynOS"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[lib]
name = "deception"
path = "src/lib.rs"

[[bin]]
name = "synos-deception"
path = "src/main.rs"
