[package]
name = "syn-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "syn_desktop"
path = "mod.rs"

[dependencies]
# Core dependencies for no_std environment
spin = { workspace = true }

# Graphics integration
synos-graphics = { path = "../graphics" }

[features]
default = []
educational = []
consciousness = []
