[package]
name = "synos-gamification"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "synos_gamification"
path = "mod.rs"

[dependencies]
# Use workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }

# For BTreeMap in no_std
hashbrown = { version = "0.14", default-features = false, features = ["serde"] }

[features]
default = []
std = []
