[package]
name = "synos-graphics"
version = "1.0.0"
edition = "2021"

[lib]
name = "synos_graphics"
path = "lib.rs"

[dependencies]
# Core allocator support for vec! macro
spin = { workspace = true }

[features]
default = ["alloc"]
alloc = []
std = ["alloc"]

[dev-dependencies]

# Profiles managed at workspace level - removed from package
