[package]
name = "synos-hsm-integration"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
