[package]
name = "syn-kernel"
version = "4.4.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "syn_kernel"
path = "src/lib.rs"

# Mark this package as not using the standard library
# This is critical for bare-metal development

[dependencies]
# Core kernel dependencies
bootloader = { workspace = true }
volatile = { workspace = true }
spin = { workspace = true }
x86_64 = { workspace = true }
pic8259 = { workspace = true }
pc-keyboard = { workspace = true }
linked_list_allocator = { workspace = true }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
hashbrown = { version = "0.14", default-features = false, features = ["ahash"], package = "hashbrown" }
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng"] }

# AI Engine integration
syn-ai = { path = "../../core/ai" }

# Serde for AI interface (no_std compatible)
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
log = { version = "0.4", default-features = false }
heapless = { version = "0.8", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
libm = "0.2"
# Additional dependencies for no_std environment
uart_16550 = "0.2"

[features]
default = ["ai-integration"]
ai-integration = []
security-enhanced = []
debug-mode = []
consciousness = ["ai-integration", "syn-ai/consciousness"]
ai-bridge = ["ai-integration", "syn-ai/ai-bridge"]
kernel-binary = []  # Feature flag to enable kernel binary compilation

# Profiles are managed at workspace level - removed from package

[[bin]]
name = "kernel"
path = "src/main.rs"
required-features = ["kernel-binary"]

[build-dependencies]
bootimage = "0.10"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 300 # (in seconds)
