[package]
name = "syn-kernel"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Syn_OS Team"]

# Empty workspace table to explicitly mark this as NOT part of parent workspace
# This is required because the kernel must be built separately with no_std target
[workspace]

[lib]
name = "syn_kernel"
path = "src/lib.rs"

# Mark this package as not using the standard library
# This is critical for bare-metal development

[dependencies]
# Core kernel dependencies (versions specified directly since kernel is not in workspace)
bootloader = { version = "0.10.12", default-features = false }
volatile = "0.4.6"
spin = { version = "0.9.8", default-features = false, features = ["mutex", "rwlock", "once", "spin_mutex", "lazy"] }
x86_64 = { version = "0.14.10", default-features = false, features = ["abi_x86_interrupt"] }
pic8259 = { version = "0.10.4", default-features = false }
pc-keyboard = { version = "0.7.0", default-features = false }
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["use_spin"] }
lazy_static = { version = "1.5", features = ["spin_no_std"] }
hashbrown = { version = "0.14", default-features = false, features = ["ahash"], package = "hashbrown" }
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng"] }

# AI Engine integration
syn-ai = { path = "../../core/ai" }

# Serde for AI interface (no_std compatible)
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
log = { version = "0.4", default-features = false }
heapless = { version = "0.8", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
libm = "0.2"
# Additional dependencies for no_std environment
uart_16550 = "0.2"

[features]
default = ["ai-integration"]
ai-integration = []
security-enhanced = []
debug-mode = []
consciousness = ["ai-integration", "syn-ai/consciousness"]
ai-bridge = ["ai-integration", "syn-ai/ai-bridge"]
kernel-binary = []  # Feature flag to enable kernel binary compilation

# Profiles are managed at workspace level - removed from package

[[bin]]
name = "kernel"
path = "src/main.rs"
required-features = ["kernel-binary"]

[build-dependencies]
bootimage = "0.10"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 300 # (in seconds)
