[workspace]
resolver = "2"

members = [
  "synos-ai-daemon",
  "synos-consciousness-daemon",
  "synos-security-orchestrator",
  "synos-hardware-accel",
  "synos-llm-engine",
  # Future services (not yet implemented):
  # "synos-voice-interface"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"

# Hardware acceleration
candle-core = { version = "0.5", features = [] }
candle-nn = { version = "0.5", features = [] }
tch = "0.16"
ort = "2.0.0-rc.10"

# Neural networks and AI
ndarray = "0.16"
hf-hub = "0.3"
tokenizers = "0.20"

# Security tools integration
rustnmap = "0.3"
reqwest = { version = "0.12", features = ["json"] }

# Voice processing
rodio = "0.19"
whisper-rs = "0.22"
cpal = "0.15"

# Networking
quinn = "0.11"
h3 = "0.0.4"

# Additional dependencies
axum = "0.7"
sysinfo = "0.31"
rand = "0.8"  # Pin to 0.8 for compatibility with candle-core
rayon = "1.10"
